--- a/Backend/node-js-express-login--mongodb/package.json
+++ b/Backend/node-js-express-login--mongodb/package.json
@@ -1,9 +1,9 @@
 {
   "name": "js-express-login--mongodb",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app/server.js"
   },
   "keywords": [
     "node.js",
