--- a/backend/node-js-jwt-auth-mongodb/package.json
+++ b/backend/node-js-jwt-auth-mongodb/package.json
@@ -1,30 +1,25 @@
 {
-  "name": "node-js-jwt-auth-mongodb",
+  "name": "node-js-jws-auth-mongodb",
   "version": "1.0.0",
-  "description": "Node.js + MongoDB: JWT Authentication & Authorization",
+  "description": "Your project description",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "keywords": [
-    "node.js",
+    "node",
     "express",
-    "jwt",
-    "authentication",
     "mongodb"
   ],
-  "author": "bezkoder",
-  "license": "ISC",
+  "author": "Your Name",
+  "license": "MIT",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.12.9"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.0"
+    "express": "^4.17.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^4.0.0",
+    "mongoose": "^8.4.1"
   }
 }
