--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "firebase": "^10.12.2",
     "lucide-react": "^0.379.0",
@@ -13,8 +14,10 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
     "react-google-button": "^0.8.0",
+    "react-navigation": "^5.0.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "tcomb-form-native": "^0.6.20",
     "tw-elements": "^2.0.0",
     "tw-elements-react": "^1.0.0-alpha2",
     "web-vitals": "^2.1.4"
@@ -23,7 +26,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "lint": "eslint src"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +47,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "babel-preset-react-app": "^10.0.1",
     "eslint": "^8.57.0",
     "tailwindcss": "^3.4.3"
   }
