--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "tcomb-form-native": "^0.6.20",
+    "three": "^0.165.0",
     "tw-elements": "^2.0.0",
     "tw-elements-react": "^1.0.0-alpha2",
     "web-vitals": "^2.1.4"
