--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,9 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "babel-preset-react-app": "^10.0.1",
     "eslint": "^8.57.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.0",
     "tailwindcss": "^3.4.3"
   }
 }
