--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/three": "^0.165.0",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "firebase": "^10.12.2",
