--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
     "react-google-button": "^0.8.0",
+    "react-icons": "^5.2.1",
     "react-navigation": "^5.0.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
