--- a/backend/node-js-jwt-auth-mongodb/package.json
+++ b/backend/node-js-jwt-auth-mongodb/package.json
@@ -21,5 +21,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^4.0.0",
     "mongoose": "^8.4.1"
+  },
+  "devDependencies": {
+    "chai": "^5.1.1",
+    "chai-http": "^5.0.0",
+    "mocha": "^10.4.0"
   }
 }
