--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@types/three": "^0.165.0",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
     "firebase": "^10.12.2",
     "lucide-react": "^0.379.0",
     "react": "^18.3.1",
