--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.17.0",
@@ -20,7 +21,7 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
     "react-google-button": "^0.8.0",
-    "react-hook-form": "^7.51.5",
+    "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
     "react-navigation": "^5.0.0",
     "react-router-dom": "^6.23.1",
