--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "firebase": "^10.12.2",
     "lucide-react": "^0.379.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
