--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,6 +65,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "tailwindcss": "^3.4.3"
   }
 }
