--- a/backend/node-js-jwt-auth-mongodb/package.json
+++ b/backend/node-js-jwt-auth-mongodb/package.json
@@ -15,12 +15,14 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.17.1",
+    "express": "^4.19.2",
+    "google-auth-library": "^9.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^4.0.0",
-    "mongoose": "^8.4.1"
+    "mongoose": "^8.4.3"
   },
   "devDependencies": {
     "chai": "^5.1.1",
