--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,20 +1,19 @@
-FROM node:16 AS build
+FROM node:14 AS build
 
 WORKDIR /usr/src/app
 
 COPY package*.json ./
+
 RUN npm install
 
 COPY . .
 
-RUN npm run build
-
 FROM nginx:stable-alpine
-
-COPY --from=build /usr/src/app/build /usr/share/nginx/html
 
 COPY nginx.conf /etc/nginx/nginx.conf
 
-EXPOSE 80
+COPY --from=build /usr/src/app /usr/share/nginx/html
+
+EXPOSE 3000
 
 CMD ["nginx", "-g", "daemon off;"]
