--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,27 +1,22 @@
-events {
-  worker_connections 1024;
-}
+worker_processes 1;
+
+events { worker_connections 1024; }
 
 http {
-  include       /etc/nginx/mime.types;
-  default_type  application/octet-stream;
+    include       mime.types;
+    default_type  application/octet-stream;
 
-  sendfile        on;
-  keepalive_timeout  65;
+    sendfile        on;
+    keepalive_timeout  65;
 
-  server {
-    listen       80;
-    server_name  localhost;
+    server {
+        listen       3000;
+        server_name  localhost;
 
-    location / {
-      root   /usr/share/nginx/html;
-      index  index.html index.htm;
-      try_files $uri /index.html;  # This is important for single-page applications
+        location / {
+            root   /usr/share/nginx/html;
+            index  index.html index.htm;
+            try_files $uri $uri/ /index.html; # Für Single Page Applications
+        }
     }
-
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-      root   /usr/share/nginx/html;
-    }
-  }
 }
